--- a/style.css
+++ b/style.css
@@ -13,6 +13,27 @@ body{
     font-family: "Roboto", sans-serif;
 } 
 
+.not_img{
+    h1{
+       margin-top: 50px;
+    font-size: 50px;
+    text-transform: uppercase;
+    animation: color1 1s infinite;
+   }
+}
+
+@keyframes color1{
+    0%{
+        color: rgba(237, 88, 83, 1);
+    }
+    50%{
+       color: rgb(255, 200, 0); 
+    }
+    100%{
+        color: red;
+    }
+}
+
 .header{
     position: sticky;  
     left: 0;
